# rust-genai

./: CONTRIBUTING_MULTIMODAL.md
python-bindings/: Cargo.toml  README.md  pyproject.toml  test_50_images.py  test_comprehensive.py  test_full_integration.py  test_real_integration.py  test_real_multimodal_pipeline.py  test_real_pipeline_integration.py  test_real_rust_genai_integration.py  test_simple_rust_genai.py  test_with_real_data.py
python-bindings/examples/: basic_usage.py  demo.py
python-bindings/src/: lib.rs
