[package]
name = "rust-genai"
version = "0.4.0"
edition = "2021"
description = "Python bindings for rust-genai multimodal embedding pipeline"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
name = "rust_genai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22"

[dependencies.genai]
# Live integration with parent rust-genai library
path = ".."
optional = true

[features]
default = []
native-integration = ["genai"]

[build-dependencies]
pyo3-build-config = "0.20"